Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111388

Crash in QCocoaMenuBar::merged

    XMLWordPrintable

Details

    • macOS
    • 8dfca2ee7 (dev), 46f2dd0e1 (6.4), 591415a2f (6.5)

    Description

      We couldn't find simple example to reproduce the crash, but a larger application sometimes crashes like this:

      frame #1: 0x0000000108ecf472 libqcocoa.dylib`QCocoaMenu::merged() const [inlined] QList<QCocoaMenuItem*>::end(this=0x0000000000000030) const at qlist.h:591:68 [opt]
      frame #2: 0x0000000108ecf472 libqcocoa.dylib`QCocoaMenu::merged(this=0x0000000000000000) const at qcocoamenu.mm:442:21 [opt]
      frame #3: 0x0000000108ed1bcb libqcocoa.dylib`QCocoaMenuBar::merged(this=<unavailable>) const at qcocoamenubar.mm:358:24 [opt]
      * frame #4: 0x0000000108ed08e7 libqcocoa.dylib`QCocoaMenuBar::updateMenuBarImmediately() at qcocoamenubar.mm:286:68 [opt]
      frame #5: 0x0000000108ed032f libqcocoa.dylib`QCocoaMenuBar::~QCocoaMenuBar(this=0x00006080003337a0) at qcocoamenubar.mm:60:9 [opt]
      frame #6: 0x0000000108ed0fde libqcocoa.dylib`QCocoaMenuBar::~QCocoaMenuBar() [inlined] QCocoaMenuBar::~QCocoaMenuBar(this=0x00006080003337a0) at qcocoamenubar.mm:38:1 [opt]
      frame #7: 0x0000000108ed0fd9 libqcocoa.dylib`QCocoaMenuBar::~QCocoaMenuBar(this=0x00006080003337a0) at qcocoamenubar.mm:38:1 [opt]
      frame #8: 0x000000010715afb5 QtWidgets`QMenuBar::~QMenuBar() at qmenubar.cpp:715:5 [opt]
      frame #9: 0x000000010715af8a QtWidgets`QMenuBar::~QMenuBar() [inlined] QMenuBar::~QMenuBar(this=0x00006040004a1790) at qmenubar.cpp:713:1 [opt]
      frame #10: 0x000000010715af8a QtWidgets`QMenuBar::~QMenuBar(this=0x00006040004a1790) at qmenubar.cpp:713:1 [opt]
      frame #11: 0x00000001090e08df QtCore`QObjectPrivate::deleteChildren(this=0x000061600056eb80) at qobject.cpp:2161:9 [opt]
      frame #12: 0x0000000106fca3e7 QtWidgets`QWidget::~QWidget(this=0x0000611000ab38c0) at qwidget.cpp:1531:12 [opt]
      

      Attachments

        For Gerrit Dashboard: QTBUG-111388
        # Subject Branch Project Status CR V

        Activity

          People

            vestbo Tor Arne Vestbø
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change