Fix crash with removed menus

Fixes: QTBUG-111388
Change-Id: I9c9f0ad5cc02293197d7e77eeeec3ffa9d72a4af
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 8dfca2ee717289b334b7ec7a5a9cc9a3d8e9654a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>